--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,7 @@
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <!-- style folder links -->
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" href="img/icon/18.png" type="image/x-icon">
+  <link rel="shortcut icon" href="img/18.png" type="image/x-icon">
 </head>
 
 <body>
