--- a/public/css/style.css
+++ b/public/css/style.css
@@ -263,10 +263,12 @@ header nav a:hover {
 }
 
 header .navbar-brand {
-    padding: 0;
+    padding: 0px 10px;
+     /* border: 1px solid red; */
 }
 
 header .navbar-brand img {
+    padding: 0px 5px;
     height: 30px;
     /* border: 1px solid red; */
 }
